# ldap-rest

./: .env  .gitignore  Cargo.toml  README.md
examples/: main.rs
keys/: public_unknown_1.pem
src/: config.rs  main.rs  mod.rs  routes.rs  types.rs  utils.rs
src/routes/: query.rs
src/routes/index/: get.rs
src/routes/query/: post.rs
src/types/: query.rs  routes.rs
src/types/query/: add.rs  bind.rs  compare.rs  delete.rs  extended.rs  modify.rs  pwdmod.rs  search.rs  whoami.rs
