[package]
name = "ldap-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ldap3 = "0.11.3"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
hickory-client = "0.24.0"
axum = { version = "0.7.5" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["timeout"] }
serde = { version = "1.0.198", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
rcgen = "0.13.1"
signal-hook = "0.3.17"
axum-server = { version = "0.6.0", features = ["rustls", "rustls-pemfile", "tls-rustls", "tokio-rustls"] }
time = "0.3.36"
rand_chacha = "0.3.1"
ssh-key = "0.6.6"
serde_json = "1.0.116"
erased-serde = "0.4.4"
anyhow = { version = "1.0.82", features = ["backtrace"] }
axum-extra = "0.9.3"
thiserror = "1.0.59"
